tests/expectations/compiler/dyn_record/dyn_record_external_struct.out
Error [EPAR0370005]: expected 'record' -- found '='
    --> compiler-test:6:20
     |
   6 |         let d: dyn = t as dyn;
     |                    ^
